sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:40: error: not found: value baseTemps
      baseTemps = baseTemp-1
      ^